# databricks-linkedin-analytics

./: .copilotignore  .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
databricks_linkedin_analytics/: .gitignore  CONTRIBUTING.md  README.md  databricks.yml  pyproject.toml
databricks_linkedin_analytics/docs/: AGENTS.md  README.md  TODO.md  architecture.md  dashboard_design.md  data_sources.md  documentation_hygiene.md  ingestion.md  maintainability.md  mapping.yml  migration_note_template.md  modeling.md  observability.md  orchestration.md  quickstart.md  transformation.md
databricks_linkedin_analytics/resources/: apps.yml  dashboards.yml  genie.yml  jobs.yml  monitoring.yml  pipelines.yml  schemas.yml  variables.yml
databricks_linkedin_analytics/src/excel_ingestion_app/: app.py  requirements.txt
databricks_linkedin_analytics/src/excel_ingestion_app/utils/: excel_validator.py  file_validation.py
databricks_linkedin_analytics/src/linkedin_analytics_jobs/0. poc/: linkedin_pipeline_poc.ipynb
databricks_linkedin_analytics/src/linkedin_analytics_jobs/0. poc and utility/: linkedin_pipeline_poc.ipynb
databricks_linkedin_analytics/src/linkedin_analytics_jobs/1. bronze ingestion/: bronze daily ingest.ipynb  bronze historical ingest.ipynb  bronze post ingest.ipynb  bronze post patch ingest.ipynb
databricks_linkedin_analytics/src/linkedin_analytics_jobs/2. silver transformation/: silver metrics consolidation.ipynb  (+4 more)
databricks_linkedin_analytics/tests/unit/: test_excel_validation.py  test_ingestion_logic.py  test_pipeline_utils.py
(+11 files in other folders)
