[project]
name = "databricks-linkedin-analytics"
version = "0.1.1"
description = "Databricks Asset Bundle for LinkedIn analytics pipelines"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.90.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["databricks_linkedin_analytics"]
